Z-index fixed

--- a/css/style.css
+++ b/css/style.css
@@ -6166,7 +6166,7 @@ textarea.form-control-lg {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1050;
+  z-index: 1039;
   width: 100vw;
   height: 100vh;
   background-color: #000000; }
